// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > matches the snapshot 1`] = `
"<div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
  </button>
  <!--v-if-->
</div>"
`;

exports[`DropdownMenu > when isOpen changes to true > matches the snapshot 1`] = `
"<div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
  </button>
  <div class="backdrop dropdown fade-enter-from fade-enter-active">
    <ul class="hasPointerEvents">Default slot content.</ul>
  </div>
</div>"
`;

exports[`DropdownMenu > when isOpen changes to true > when isOpen changes to false > matches the snapshot 1`] = `
"<div class="centerItems dropdownMenu"><button class="centerItems buttonLink alignRight buttonLink buttonLink" draggable="false" type="button" title="More">
    <phdotsthreevertical aria-hidden="true" class="icon" size="24" weight="regular"></phdotsthreevertical><span class="clamp text visuallyHidden">More</span>
  </button>
  <div class="backdrop dropdown fade-enter-from fade-leave-from fade-leave-active">
    <ul class="hasPointerEvents">Default slot content.</ul>
  </div>
  <!--v-if-->
</div>"
`;
